# python_projects

./: .gitignore
AutoBinger/: .gitignore  LICENSE  auto_updaters.py  pyproject.toml  requirements.txt  settings.py  test.py
cs50pFinal/: README.md  project.py  requirements.txt
cs50pFinal/tests/: test_project.py
powershell/ADUser_ExMailbox_OfficeLic-Creation/: Pt1-ADUserCreation.ps1  Pt2-ExchangeMailboxCreation.ps1  Pt3-OfficeLicenseAssignment.ps1  README.md
